labour/test/valid/valid_listing1_style.labour
bouldering_wall "Notation42": {
  routes [
    bouldering_route "around the barrel": {
      grade: "7A",
      grid_base_point: { x: 120, y: 40 },
      holds ["0010", "0011", "0012"]
    }
  ],
  volumes [
    circle: {
      pos: { x: 200, y: 180 },
      depth: 35,
      radius: 60,
      front_holds [
        hold "0010": {
          pos: { x: 30, y: 70 },
          shape: "107",
          colours [ purple, pink ],
          start_hold: 1,
          rotation: 30
        },
        hold "0012": {
          pos: { x: 0, y: 55 },
          shape: "108",
          rotation: 359,
          colours [ purple ],
          end_hold
        }
      ],
      side_holds [
        hold "0011": {
          pos: { angle: 330 },
          shape: "42",
          colours [ purple, white ]
        }
      ]
    }
  ]
}
